# thesis

./: .gitignore  CMakeLists.txt  model_info
include/: AdjacencyGraph.hpp  Part.hpp  StepReader.hpp
models/: histogram-failed.FCStd
src/: AdjacencyGraph.cpp  CMakeLists.txt  Part.cpp  StepReader.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
